--- a/manoj.yml
+++ b/manoj.yml
@@ -8,6 +8,6 @@
     - name: copy
       shell: docker rm -f ban
     - name: copy
-      shell: docker build -t hero .
+      shell: docker build -t hero /public/
     - name: copy
       shell: docker run -it  --name ban -d -p 80:80 hero
